--- a/index.html
+++ b/index.html
@@ -1,1 +1,43 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Esercizio</title>
+</head>
+
+<body>
+    <main>
+        <div class="sidebar">
+            <div>MR</div>
+            <a href="logo"></a>
+        </div>
+
+        <div class="porco">
+            <form>
+
+                <input placeholder="ricerca" type="search">
+
+
+
+            </form>
+        </div>
+
+
+
+
+        <div class="conttre">
+            <div class="sidebar2">
+                <div class="rettangolo2"></div>
+            </div>
+
+        </div>
+    </main>
+
+
+</body>
+
+</html>
